相機視角傳遞 新增相機校正功能

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:show_fps="true" />
+
     <Button
-        android:id="@+id/cameraCalibration"
+        android:id="@+id/Calibration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Calibration"/>
+        android:text="Calibration"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
