--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,13 +12,13 @@
         android:layout_height="match_parent"
         app:show_fps="true" />
 
-    <Button
+    <!--<Button
         android:id="@+id/Calibration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calibration"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent" />-->
 
     <Button
         android:id="@+id/Begin"
