相機視角傳遞 新增相機校正功能 修改部分 8/22 標記定位完成 內參更新 貼圖更新 相機位置由另一thread計算 光流追蹤

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,15 +27,33 @@
         android:text="Begin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
-    <!--
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="248dp"
-            android:layout_height="245dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_launcher_background"
-            tools:layout_editor_absoluteX="0dp"
-            tools:layout_editor_absoluteY="48dp" />-->
+    <Button
+        android:id="@+id/close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="180dp"
+        android:text="Close"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/Ready"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="88dp"
+        android:text="準備"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/image"
+        android:layout_width="124dp"
+        android:layout_height="122dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_launcher_background"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@id/Begin"
+        tools:layout_editor_absoluteY="48dp"></ImageView>
 
 </android.support.constraint.ConstraintLayout>
