相機視角傳遞 新增相機校正功能 修改部分 8/22 標記定位完成 內參更新 貼圖更新 相機位置由另一thread計算 光流追蹤

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,15 +10,17 @@
         android:id="@+id/java_camera_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:show_fps="true" />
+        app:show_fps="true"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="-126dp" />
 
-    <!--<Button
+    <Button
         android:id="@+id/Calibration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calibration"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />-->
+        app:layout_constraintRight_toRightOf="parent" />
 
     <Button
         android:id="@+id/Begin"
@@ -27,6 +29,7 @@
         android:text="Begin"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"/>
+
     <Button
         android:id="@+id/close"
         android:layout_width="wrap_content"
@@ -55,5 +58,60 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/Begin"
         tools:layout_editor_absoluteY="48dp"></ImageView>
+
+    <TextView
+        android:id="@+id/color"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="30dp"
+        android:text="顏色"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintTop_toBottomOf="@id/image"
+        app:layout_constraintLeft_toLeftOf="@id/image"
+        tools:layout_editor_absoluteY="122dp" />
+
+    <TextView
+        android:id="@+id/speed"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="速度"
+        android:textSize="30dp"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintTop_toBottomOf="@id/color"
+        app:layout_constraintLeft_toLeftOf="@id/image"
+        tools:layout_editor_absoluteY="122dp" />
+
+    <TextView
+        android:id="@+id/size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="大小"
+        android:textSize="30dp"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintTop_toBottomOf="@id/speed"
+        app:layout_constraintLeft_toLeftOf="@id/image"
+        tools:layout_editor_absoluteY="122dp" />
+
+    <TextView
+        android:id="@+id/IsAlive"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="狀態"
+        android:textSize="30dp"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintTop_toBottomOf="@id/size"
+        app:layout_constraintLeft_toLeftOf="@id/image"
+        tools:layout_editor_absoluteY="122dp" />
+
+    <TextView
+        android:id="@+id/IsWin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="結果"
+        android:textSize="30dp"
+        android:textColor="@android:color/background_light"
+        app:layout_constraintTop_toBottomOf="@id/IsAlive"
+        app:layout_constraintLeft_toLeftOf="@id/image"
+        tools:layout_editor_absoluteY="122dp" />
 
 </android.support.constraint.ConstraintLayout>
