--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,13 +14,13 @@
         tools:layout_editor_absoluteX="16dp"
         tools:layout_editor_absoluteY="-126dp" />
 
-    <Button
+    <!--Button
         android:id="@+id/Calibration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calibration"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent" /-->
 
     <Button
         android:id="@+id/Begin"
@@ -50,8 +50,9 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="124dp"
-        android:layout_height="122dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:rotation="90"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:src="@drawable/ic_launcher_background"
